# Avengers-Assemble

./: README.md
server/: .env  Cargo.toml
server/src/: main.rs
server/src/application/use_cases/: authentication.rs  brawlers.rs  brawlers_test.rs  crew_operation.rs  crew_operation_test.rs  mission_management.rs  mission_management_test.rs  mission_operation.rs  mission_operation_test.rs  mission_viewing.rs  mission_viewing_test.rs  mod.rs
server/src/config/: config_loader.rs  config_model.rs
server/src/domain/entities/: brawlers.rs  crew_memberships.rs  missions.rs
server/src/domain/repositories/: brawlers.rs  crew_participation.rs  mission_management.rs  mission_viewing.rs
server/src/domain/value_objects/: brawler_model.rs  mission_filter.rs  mission_model.rs  mission_statuses.rs  mod.rs  uploaded_image.rs
server/src/infrastructure/argon2/: mod.rs
server/src/infrastructure/database/: schema.rs
server/src/infrastructure/database/migrations/00000000000000_diesel_initial_setup/: up.sql
server/src/infrastructure/database/repositories/: brawlers.rs  crew_operation.rs  diesel_transaction.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs  mod.rs
server/src/infrastructure/http/: http_serv.rs  http_sev.rs  mod.rs
server/src/infrastructure/http/middleware/: auth.rs
server/src/infrastructure/http/routers/: authentication.rs  brawlers.rs  crew_operation.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs
server/src/infrastructure/http/routes/: default_routers.rs
server/src/infrastructure/jwt/: jwt_model.rs
(+34 files in other folders)
